--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="../CSS/header.css">
     <link rel="shortcut icon" href="../Imagens/bola rosquinha rosa.png" type="image/x-icon" />
     <link rel="stylesheet" href="../CSS/perfil.css">
     <link rel="stylesheet" href="../CSS/responsividade-perfil.css">
@@ -24,8 +25,8 @@
                </div> 
 
                <div class="menu">
-                <span class="material-symbols-outlined" id="burger"> menu</span>
-                    <ul>
+                <span class="material-symbols-outlined" id="burger" onclick="clickMenu()"> menu</span>
+                    <ul id="itens">
                         <li><a href="">Inicio</a></li>
                         <li><a href="Perfil.html">Perfil</a></li>
                         <li><a href="">Recados</a></li>
@@ -54,5 +55,17 @@
        
 
     </div>
+
+    <script>
+        function clickMenu() {
+    if (itens.style.display === 'none') {
+        itens.style.display = 'block';
+    } else {
+        itens.style.display = 'none';
+    }
+    
+}
+    </script>
 </body>
+
 </html>
