Add imagens + inicio da comunidade

--- a/Paginas/Login.html
+++ b/Paginas/Login.html
@@ -14,41 +14,28 @@
     <header>
         <h1><img src="../Imagens/logo orkut.png"></h1>
     </header>
-
-    <div>
-        <div>
-            <!-- bolas -->
-        </div>
-        <div>
-            <!-- frases -->
-        </div>
-        <div>
-            <!-- form -->
-        </div>
-        <div>
-            <!-- bolas -->
-        </div>
-
-    </div>
     <main>
         <div class="direito">
             <div class="login">
                 <form method="post" name="login">
-                    <input type="email" name="email" placeholder="informe seu email de login" style="padding-left: 15px;">
+                    <input type="email" name="email" placeholder="informe seu email de login"
+                        style="padding-left: 15px;">
                     <br>
                     <input type="password" name="password" placeholder="informe sua senha" style="padding-left: 15px;">
                     <br>
-                    <input type="submit" name="entrar" value="entrar" style="background-color: #449C5C; color: white; border: none;">
+                    <input type="submit" name="entrar" value="entrar"
+                        style="background-color: #449C5C; color: white; border: none;">
                 </form>
                 <div class="links">
                     <p><strong><a href="#">Esqueceu sua senha?</a></strong></p>
                     <p>Ainda não tem conta?<strong><a href="./Cadastro.html"> Cadastre-se aqui!</a></strong></p>
                 </div>
             </div>
-            
+            <figure>
                 <img src="../Imagens/Bola rosa.png" class="img1">
                 <img src="../Imagens/bola riscadinha dourada.png" class="img2">
-            
+            </figure>
+
         </div>
 
         <div class="esquerdo">
@@ -72,7 +59,8 @@
     </main>
 
     <footer>
-        <p><strong>© 2022 Orkut - Sobre o Orkut - Centro de Segurança - LGPD - Termos</strong></p>
+        <p><strong>© 2022 Orkut - <a href="#">Sobre o Orkut</a> - <a href="#">Centro de Segurança</a> - <a
+                    href="#">LGPD</a> - <a href="#">Termos</a></strong></p>
     </footer>
 
 </body>
