Atualização página de perfil

--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="shortcut icon" href="../Imagens/bola rosquinha rosa.png" type="image/x-icon" />
     <link rel="stylesheet" href="../CSS/perfil.css">
@@ -25,28 +26,202 @@
             <div class="busca-orkut">
                 <input type="text" placeholder="Buscar no Orkut">
             </div>
-               <div class="menu">
+            <div class="menu">
                 <span class="material-symbols-outlined" id="burger" onclick="clickMenu()"> menu</span>
-                    <ul id="itens">
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="Perfil.html">Perfil</a></li>
-                        <li><a href="">Recados</a></li>
-                        <li><a href="">Amigos</a></li>
-                        <li><a href="Comunidade.html">Comunidades</a></li>
-                    </ul>
-               </div>
-
+                <ul id="itens">
+                    <li><img src="../Imagens/icone_menu.png" alt=""><a href="">Inicio</a></li>
+                    <li><img src="../Imagens/icone_menu.png" alt=""><a href="Perfil.html">Perfil</a></li>
+                    <li><img src="../Imagens/icone_menu.png" alt=""><a href="">Recados</a></li>
+                    <li><img src="../Imagens/icone_menu.png" alt=""><a href="">Amigos</a></li>
+                    <li><img src="../Imagens/icone_menu.png" alt=""><a href="Comunidade.html">Comunidades</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="container-conteudo">
             <div class="container-esquerdo">
-                ESQUERDO
+
+                <div class="img-perfil">
+                    <img src="../Imagens/Pessoas/3.png" alt="">
+                </div>
+
+                <div class="info-perfil">
+                    <div>
+                        <h1>Garibaldo Amaral</h1>
+                    </div>
+                    <div>
+                        <p>Olá, meu nome é Garibaldo, mas pode me chamar de Gah. Tenho 28 anos e amo gatinhos.</p>
+                    </div>
+
+                    <hr>
+
+                    <div class="opcoes-perfil">
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                account_circle
+                            </span>
+
+                            <a href="">Editar Perfil</a>
+                        </div>
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                attach_email
+                            </span>
+
+                            <a href="">Recados</a>
+                        </div>
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                photo_library
+                            </span>
+
+                            <a href="">Álbum</a>
+                        </div>
+
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                videocam
+                            </span>
+
+                            <a href="">Vídeos</a>
+                        </div>
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                feed
+                            </span>
+
+                            <a href="">Feed</a>
+                        </div>
+
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+
+                            <a href="">Feed Favoritos</a>
+                        </div>
+
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                forum
+                            </span>
+
+                            <a href="">Mensagens</a>
+                        </div>
+
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                lift_to_talk
+                            </span>
+
+                            <a href="">Depoimentos</a>
+                        </div>
+
+                        <div class="item-opcao">
+                            <span class="material-symbols-outlined">
+                                settings
+                            </span>
+
+                            <a href="">Configurações</a>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
             <div class="container-central">
-                CENTRAL
+               <div class="feed-perfil">
+                   <div class="titulo-feed">
+                        <h1>Bem vindo, Garibaldo!</h1>
+                   </div>
+
+                   <div class="bloco-welcome">
+                        <div class="itens-principais">
+                            <div class="item-welcome">
+                                <a href="">Recados</a>
+                                <img src="../Imagens/" alt="">
+                            </div>
+                        </div>
+                   </div>
+
+               </div>
             </div>
 
             <div class="container-direito">
-                DIREITO
+                <div class="amigos-comunidades">
+                    <div class="amigos">
+                        <div class="titulo">
+                            <h1>Amigos</h1>
+                        </div>
+                        <div class="amigo">
+                            <img src="../Imagens/Pessoas/2.png" alt="">
+                            <a href="">José da Silva</a>
+                            <span class="status ativo">◉</span>
+                        </div>
+
+                        <div class="amigo">
+                            <img src="../Imagens/Pessoas/4.png" alt="">
+                            <a href="">Mariane de Oliveira</a>
+                            <span class="status ativo">◉</span>
+                        </div>
+
+                        <div class="amigo">
+                            <img src="../Imagens/Pessoas/14.png" alt="">
+                            <a href="">Luciano de Almeida</a>
+                            <span class="status ocupado">◉</span>
+                        </div>
+
+                        <div class="amigo">
+                            <img src="../Imagens/Pessoas/5.png" alt="">
+                            <a href="">Márcia Ferraz</a>
+                            <span class="status ocupado">◉</span>
+                        </div>
+
+                        <div class="amigo">
+                            <img src="../Imagens/Pessoas/13.png" alt="">
+                            <a href="">Jaqueline Braga</a>
+                            <span class="status inativo">◉</span>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="comunidades">
+                        <div class="titulo">
+                            <h1>Comunidades</h1>
+                        </div>
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/2.png" alt="">
+                            <a href="">Top Coders</a>
+                        </div>
+
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/4.png" alt="">
+                            <a href="">Programadores Brasil</a>
+                        </div>
+
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/14.png" alt="">
+                            <a href="">VASP - Vagabundos Anônimos Sustentados Pelos Pais</a>
+                        </div>
+
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/5.png" alt="">
+                            <a href="">Odeio Maçã Farinhenta</a>
+                        </div>
+
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/13.png" alt="">
+                            <a href="">Odeio Acordar Cedo</a>
+                        </div>
+
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/13.png" alt="">
+                            <a href="">Queria sorvete, mas er</a>
+                        </div>
+                        <div class="comunidade">
+                            <img src="../Imagens/Pessoas/13.png" alt="">
+                            <a href="">Coca-Cola de 20L</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -55,13 +230,13 @@
 
     <script>
         function clickMenu() {
-    if (itens.style.display === 'none') {
-        itens.style.display = 'block';
-    } else {
-        itens.style.display = 'none';
-    }
-    
-}
+            if (itens.style.display === 'none') {
+                itens.style.display = 'block';
+            } else {
+                itens.style.display = 'none';
+            }
+
+        }
     </script>
 </body>
 
