Finalizando estrutura pagina perfil ainda pendente ajustes

--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -129,21 +129,123 @@
             </div>
 
             <div class="container-central">
-               <div class="feed-perfil">
-                   <div class="titulo-feed">
+                <div class="feed-perfil">
+                    <div class="titulo-feed">
                         <h1>Bem vindo, Garibaldo!</h1>
-                   </div>
+                    </div>
 
-                   <div class="bloco-welcome">
+                    <div class="bloco-welcome">
                         <div class="itens-principais">
                             <div class="item-welcome">
                                 <a href="">Recados</a>
-                                <img src="../Imagens/" alt="">
+                                <img src="../Imagens/lapis.png" alt="">
+                            </div>
+
+                            <div class="item-welcome">
+                                <a href="">Fotos</a>
+                                <img src="../Imagens/galeria.png" alt="">
+                            </div>
+
+                            <div class="item-welcome">
+                                <a href="">Videos</a>
+                                <img src="../Imagens/video.png" alt="">
+                            </div>
+
+                            <div class="item-welcome">
+                                <a href="">Fãs</a>
+                                <img src="../Imagens/estrela.png" alt="">
+                            </div>
+
+                            <div class="item-welcome">
+                                <a href="">Mensagens</a>
+                                <img src="../Imagens/mensagem.png" alt="">
                             </div>
                         </div>
-                   </div>
 
-               </div>
+                        <div>
+                            <h3>Últimas Visualizações: </h3>
+                        </div>
+
+                        <div class="ultimas-visualizacoes">
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/1.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/2.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/3.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/4.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/5.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/6.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/7.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/8.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/9.png" alt="">
+                            </div>
+                            <div class="pessoa">
+                                <img src="../Imagens/Pessoas/10.png" alt="">
+                            </div>
+                        </div>
+
+                        <hr>
+
+
+                        <div>
+                            <h2>Aniversariantes da Semana:</h2>
+                        </div>
+
+                        <div class="aniversariantes">
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/1.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/2.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/3.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/4.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/5.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/6.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/6.png" alt="">
+                            </div>
+                            <div class="aniversariante">
+                                <img src="../Imagens/Pessoas/6.png" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="container-postar">
+                        <div class="escreva-algo">
+                            <img src="../Imagens/Pessoas/3.png" alt=""> <input type="text" id="post" placeholder="compartilhe algo">
+                        </div>
+                        <div class="botoes-post">
+                                <button type="reset">Cancelar</button>
+                                <button type="submit" id="btn-enviar">Enviar</button>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
             <div class="container-direito">
