Arrumando alinhamento da descrição da comunidade.

--- a/Paginas/Comunidade.html
+++ b/Paginas/Comunidade.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="caixinha">
                     <h3>Idioma</h3>
-                    <p>Portugês, Inglês</p>
+                    <p>Português, Inglês</p>
                 </div>
                 <div class="divisor">
                     <hr>
