Passando css de pesquisa para arquivo header.css

--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="shortcut icon" href="../Imagens/bola rosquinha rosa.png" type="image/x-icon" />
     <link rel="stylesheet" href="../CSS/perfil.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="../CSS/responsividade-perfil.css">
 
     <title>Seu Perfil - Orkut</title>
@@ -334,6 +335,21 @@
 
 
     </div>
+
+    <footer>
+        <nav>
+            <ul>
+                <li>© 2022 Orkut</li>
+                <li><a href="#">Sobre o Orkut </a></li>
+                <li><a href="#">Centro de Segurança </a></li>
+                <li><a href="#">LGPD </a></li>
+                <li><a href="#">Termos</a></li>
+            </ul>
+        </nav>
+        <div>
+            <p>Desenvolvido por: <a href="https://github.com/victup">Víctor Gonçalves</a> e <a href="https://github.com/teatrologa">Marília Castro</a></p>
+        </div>
+    </footer>
 
     <script>
         function clickMenu() {
