--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -21,8 +21,9 @@
     <div class="container-geral">
 
         <div class="container-header">
-
-            <img src="../Imagens/logo orkut.png" alt="Logo Orkut" id="logo">
+            <figure>
+                <img src="../Imagens/logo orkut.png" alt="Logo Orkut" id="logo">
+            </figure>
 
             <div class="busca-orkut">
                 <input type="text" placeholder="Buscar no Orkut">
