Alteração em Header + comunidade + Footer

--- a/Paginas/Comunidade.html
+++ b/Paginas/Comunidade.html
@@ -33,6 +33,17 @@
                 </ul>
             </div>
         </div>
+
+        <script>
+            function clickMenu() {
+                if (itens.style.display == 'none') {
+                    itens.style.display = 'block';
+                } else {
+                    itens.style.display = 'none';
+                }
+            }
+        </script>
+
     </header>
     
     <main class="container">
