--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -307,8 +307,8 @@
                         </div>
 
                         <div class="comunidade">
-                            <img src="../Imagens/Comunidades/VASP.png" alt="">
-                            <a href="">VASP - Vagabundos Anônimos Sustentados Pelos Pais</a>
+                            <img src="../Imagens/Comunidades/vasp-icon.png" alt="">
+                            <a href="../Paginas/Comunidade.html">VASP - Vagabundos Anônimos Sustentados Pelos Pais</a>
                         </div>
 
                         <div class="comunidade">
@@ -336,7 +336,7 @@
 
 
     </div>
-
+<div class="container-footer">
     <footer>
         <nav>
             <ul>
@@ -352,6 +352,8 @@
         </div>
     </footer>
 
+</div>
+    
     <script>
         function clickMenu() {
             if (itens.style.display == 'none') {
