Footer + resonsividade comunidade

--- a/Paginas/Comunidade.html
+++ b/Paginas/Comunidade.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/comunidade.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <link rel="stylesheet" href="../CSS/responsividade-perfil.css">
+    <link rel="stylesheet" href="../CSS/responsividade-comunidade.css">
 
     <title>VASP - Orkut</title>
 </head>
@@ -164,91 +164,94 @@
             </div>
         </div>
         <div class="direita">
-            <div class="membros">
-                <h2>Membros Online</h2>
-                <hr>
-                <ul>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/13.png" alt="">
-                        <span class="status ocupado">◉</span>
-                        <p>Jaqueline Braga</p>
-                    </a></li>
+            <div class="c-direita">
+                <div class="membros">
+                    <h2>Membros Online</h2>
+                    <hr>
+                    <ul>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/13.png" alt="">
+                            <span class="status ocupado">◉</span>
+                            <p>Jaqueline Braga</p>
+                        </a></li>
+    
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/12.png" alt="">
+                            <span class="status ativo">◉</span>
+                            <p>Marcio Rodriguês</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/19.png" alt="">
+                            <span class="status ativo">◉</span>
+                            <p>Bernardo de Campos Sales</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/15.png" alt="">
+                            <span class="status ausente">◉</span>
+                            <p>Igor Amarante</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/4.png" alt="">
+                            <span class="status ausente">◉</span>
+                            <p>Roberta Souza</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/8.png" alt="">
+                            <span class="status ocupado">◉</span>
+                            <p>Luciano Nishidomi</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/6.png" alt="">
+                            <span class="status ativo">◉</span>
+                            <p>Amanda Michele de Sousa</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Pessoas/18.png" alt="">
+                            <span class="status ausente">◉</span>
+                            <p>Renata Bragança</p>
+                        </a></li>
+                    </ul>
+                </div>
+                <div class="comunidades">
+                    <h2>Sugestões</h2>
+                    <hr>
+                    <ul>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/cocacola.png" alt="">
+                            <p>Queremos Coca Cola de 20L</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/friends quadro.png" alt="">
+                            <p>Melhor do que HIMYM</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/baby driver.png" alt="">
+                            <p>Baby Driver Lovers</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/garfield.png" alt="">
+                            <p>Odeio acordar cedo</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/programing br.png" alt="">
+                            <p>Programadores Br</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/pote de sorvete.jpg" alt="">
+                            <p>Achei que era sorvete mas...</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/leitores.png" alt="">
+                            <p>Leitores Br</p>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="../Imagens/Comunidades/Maçã.png" alt="">
+                            <p>Odeio maçã farinhenta</p>
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
 
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/12.png" alt="">
-                        <span class="status ativo">◉</span>
-                        <p>Marcio Rodriguês</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/19.png" alt="">
-                        <span class="status ativo">◉</span>
-                        <p>Bernardo de Campos Sales</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/15.png" alt="">
-                        <span class="status ausente">◉</span>
-                        <p>Igor Amarante</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/4.png" alt="">
-                        <span class="status ausente">◉</span>
-                        <p>Roberta Souza</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/8.png" alt="">
-                        <span class="status ocupado">◉</span>
-                        <p>Luciano Nishidomi</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/6.png" alt="">
-                        <span class="status ativo">◉</span>
-                        <p>Amanda Michele de Sousa</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Pessoas/18.png" alt="">
-                        <span class="status ausente">◉</span>
-                        <p>Renata Bragança</p>
-                    </a></li>
-                </ul>
-            </div>
-            <div class="comunidades">
-                <h2>Sugestões</h2>
-                <hr>
-                <ul>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/cocacola.png" alt="">
-                        <p>Queremos Coca Cola de 20L</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/friends quadro.png" alt="">
-                        <p>Melhor do que HIMYM</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/baby driver.png" alt="">
-                        <p>Baby Driver Lovers</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/garfield.png" alt="">
-                        <p>Odeio acordar cedo</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/programing br.png" alt="">
-                        <p>Programadores Br</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/pote de sorvete.jpg" alt="">
-                        <p>Achei que era sorvete mas...</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/leitores.png" alt="">
-                        <p>Leitores Br</p>
-                    </a></li>
-                    <li><a href="#">
-                        <img src="../Imagens/Comunidades/Maçã.png" alt="">
-                        <p>Odeio maçã farinhenta</p>
-                    </a></li>
-                </ul>
-            </div>
         </div>
 
     </main>
